[package]
name = "gknox"
version = "0.3.2"
description = "structured secret vault encrypted through GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/knox"
license = "MIT"
readme = "../README.md"

edition = "2018"
workspace = "../"

[dependencies]
libknox = { version = "^0.4", path = "../libknox" }
relm = "^0.18"
relm-attributes = "^0.16"
relm-derive = "^0.18"
itertools = "^0.8"
rust-embed="^5.2"
glib = "^0.8"
clipboard = "^0.5"
dirs = "2.0.2"

[features]
default = ["relm-attributes/unstable"]

[dependencies.gtk]
version = "^0.7"
features = ["v3_24"]

[dependencies.gdk-pixbuf]
version = "^0.7"
features = ["v2_36_8"]
