[package]
name = "knox_testing"
version = "0.1.0"
description = "secret vault encrypted with GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/knox"
license = "MIT"
publish = false

edition = "2018"

[dependencies]
libknox = { path = "../libknox" }
tempfile = "^3.0"
protobuf = "^2.14"
gpgme = "0.9.2"
uuid = { version = "0.8.1", features = ["v4"] }
