[package]
name = "knox"
version = "0.2.0"
description = "structured secret vault encrypted through GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/knox"
license = "MIT"
readme = "../README.md"

edition = "2018"
workspace = "../"

[[bin]]
name = "knox"
path = "src/main.rs"

[dev-dependencies]
knox_testing = { path = "../knox-testing" }

[dependencies]
libknox = { version = "^0.2", path = "../libknox" }
log = "^0.4"
pretty_env_logger = "^0.2"
clap = { version = "^2.0", features = ["yaml"] }
rand = "^0.6"
rpassword = "2.1.0"
colored = "1.6"
clipboard = "^0.5"
dirs = "1.0.4"
reqwest = "^0.9.0"
sha-1 = "^0.8.0"
indicatif = "^0.11.0"
