[package]
name = "libknox"
version = "0.3.1"
description = "secret vault encrypted with GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/knox"
license = "MIT"

edition = "2018"
workspace = "../"
build = "build.rs"

[build-dependencies]
protoc-rust = "2.0"

[dev-dependencies]
knox_testing = { path = "../knox-testing", version = "0.1.0" }
chrono = "0.4"

[dependencies]
protobuf = "^2.2"
gpgme = "^0.8"
uuid = { version = "^0.7", features = ["v4"] }
git2 = "0.8"
oath = "0.10"

[features]
protobufs = []
