[package]
name = "libknox"
version = "0.4.0"
description = "secret vault encrypted with GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/knox"
license = "MIT"

edition = "2018"
workspace = "../"
build = "build.rs"

[build-dependencies]
protoc-rust = "^2.14"

[dev-dependencies]
knox_testing = { path = "../knox-testing", version = "0.1.0" }
chrono = "0.4.11"

[dependencies]
protobuf = "^2.14"
gpgme = "^0.9.2"
uuid = { version = "^0.8.1", features = ["v4"] }
git2 = "0.13.5"
oath = "0.10.2"

[features]
protobufs = []
