[package]
name = "vault_testing"
version = "0.1.0"
description = "secret vault encrypted with GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/vault.rs"
license = "MIT"
publish = false

edition = "2018"

[dependencies]
vault = { path = "../vault" }
tempfile = "^3.0"
protobuf = "^2.2"
gpgme = "^0.8"
uuid = { version = "^0.7", features = ["v4"] }
