[package]
name = "vault"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
edition = "2018"
workspace = "../"

[build-dependencies]
protoc-rust = "2.0"

[dev-dependencies]
tempfile = "^3.0"

[dependencies]
protobuf = "^2.2"
gpgme = "^0.8"
uuid = { version = "^0.7", features = ["v4"] }
