[package]
name = "vault"
version = "0.1.0"
description = "secret vault encrypted with GPG"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/vault.rs"
license = "MIT"

edition = "2018"
workspace = "../"
build = "build.rs"

[build-dependencies]
protoc-rust = "2.0"

[dev-dependencies]
tempfile = "^3.0"

[dependencies]
protobuf = "^2.2"
gpgme = "^0.8"
uuid = { version = "^0.7", features = ["v4"] }

[features]
protobufs = []
